code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_146.wast
(assert_invalid
  (module (func $type-break-operand-i32-vs-i64 (result i32)
    (i64.ctz (block (br 0 (i64.const 9))))
  ))
  "type mismatch"
)